--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@faker-js/faker": "8.0.2",
+    "@tanstack/react-query": "^5.18.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
+    "axios": "^1.6.7",
     "classnames": "2.3.2",
+    "jest": "^29.7.0",
     "json-server": "0.17.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,7 +36,7 @@
     "jsdom": "22.1.0",
     "vite": "4.3.9",
     "vite-plugin-svgr": "3.2.0",
-    "vitest": "0.32.2"
+    "vitest": "^0.32.2"
   },
   "eslintConfig": {}
 }
